# book-manage

./: .gitignore  CMakeLists.txt  INSTALL  en_US.po  i18n  install.sh  install_manifest.txt  zh_CN.po
include/: book-manage_config.h.in  book-manage_config.hpp  book-manage_config.hpp.in  debug.hpp  head.hpp  json.hpp  sql.hpp
lib/: .fuse_hidden000010080000001a
locale/en_US/LC_MESSAGES/: book-manage.mo
locale/zh_CN/LC_MESSAGES/: book-manage.mo
src/: CMakeLists.txt
src/isbn/: CMakeLists.txt  json.cpp  sql.cpp  web.cpp
src/lib/: .menu.cpp.swp  CMakeLists.txt  menu.cpp
src/main/: .main.cpp.swp  CMakeLists.txt  main.cpp
src/mainlib/: CMakeLists.txt  do.cpp  menu.cpp
src/setting/: CMakeLists.txt  search.cpp
src/sql/: CMakeLists.txt  increase.cpp  search.cpp
